Places YUI Logger beneath exponent menu (z-index) and fixes a shipping model problem

--- a/framework/modules/administration/assets/css/slingbar.css
+++ b/framework/modules/administration/assets/css/slingbar.css
@@ -521,5 +521,6 @@
     margin: 0;
 }
 #yuilogger .yui3-console-separate {
-    top: 35px;
+    top: 32px;
+    z-index:10;
 }
